--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,12 @@
     "indent": ["error", 2],
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
+    "arrow-parens": 0,
     "prettier/prettier": "error"
-  }
+  },
+  
+  "parserOptions": {
+    "ecmaVersion": 6
+}
+  
 }
