--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1-Passport-Example",
+  "name": "groceryList",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -18,15 +18,13 @@
     "express": "^4.17.0",
     "express-session": "^1.16.1",
     "mysql2": "^1.6.5",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cross-env": "^5.2.0",
-    "eslint": "^4.19.1",
+    "eslint": "^7.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
     "mocha": "^5.2.0",
