--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "groceryList",
+  "name": "grocerylist",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -14,10 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "2.4.3",
     "express": "^4.17.0",
-    "express-session": "^1.16.1",
-    "mysql2": "^1.6.5",
+    "express-handlebars": "^4.0.4",
+    "mysql2": "^2.1.0",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
