--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.17.0",
     "express-handlebars": "^4.0.4",
+    "handlebars": "^4.7.6",
     "mysql2": "^2.1.0",
     "sequelize": "^5.8.6"
   },
