--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "root",
-      "password": "Ariella3",
+      "password": "root",
       "database": "grocerylist",
       "host": "127.0.0.1",
       "port": 3306,
