--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "root",
-      "password": "root",
+      "password": "Fairfield19",
       "database": "grocerylist",
       "host": "127.0.0.1",
       "port": 3306,
@@ -9,7 +9,7 @@
     },
     "test": {
       "username": "root",
-      "password": "Ariella3",
+      "password": "Fairfield19",
       "database": "grocerylist",
       "host": "127.0.0.1",
       "port": 3306,
@@ -17,11 +17,12 @@
     },
     "production": {
       "username": "root",
-      "password": "Ariella3",
+      "password": "Fairfield19",
       "database": "grocerylist",
       "host": "127.0.0.1",
       "port": 3306,
-      "dialect": "mysql"
+      "dialect": "mysql",
+      "use_env_variable": "JAWSDB_URL"
     }
   }
   
