--- a/config/config.json
+++ b/config/config.json
@@ -21,8 +21,7 @@
       "database": "grocerylist",
       "host": "127.0.0.1",
       "port": 3306,
-      "dialect": "mysql",
-      "use_env_variable": "JAWSDB_URL"
+      "dialect": "mysql"
     }
   }
   
